# finance-management-dashboard

./: .gitignore  README.md
backend/: .env.example  Makefile  build.sh  package.json  pyproject.toml  start.sh
backend/app/: main.py
backend/app/core/: config.py  logging.py
backend/app/database/: __init__.py  prisma_client.py
backend/app/middlewares/: __init__.py  request_logging.py  trace_id.py
backend/app/models/: __init__.py  schemas.py
backend/app/prisma/: schema.prisma
backend/app/routers/: advisor.py  dashboard.py  expenses.py  stocks.py
backend/app/services/: __init__.py  advisor_service.py  dashboard_service.py  expense_service.py  stock_service.py
backend/app/utils/: __init__.py  serializers.py  stocks.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/expenses/: page.tsx
frontend/app/stocks/: page.tsx
frontend/components/: add-expense-modal-context.tsx  add-expense-modal.tsx  animated-page.tsx  app-shell.tsx  delete-expense-dialog.tsx  demo-banner.tsx  edit-expense-modal.tsx  error-display.tsx  expense-detail.tsx  expense-edit-wrapper.tsx  expense-form.tsx  expense-table.tsx  loading-spinner.tsx  providers.tsx  query-boundary.tsx  sidebar-nav.tsx  status-badge.tsx  view-expense-modal.tsx
frontend/components/dashboard/: charts.tsx  dashboard-content.tsx  dashboard-date-filters.tsx  summary-cards.tsx
frontend/components/stocks/: stock-advisor-chat.tsx  (+4 more)
frontend/lib/: api.ts  queries.ts  types.ts
frontend/prisma/: schema.prisma  seed.ts
(+2 files in other folders)
